--- a/week13-project3/views/index.html
+++ b/week13-project3/views/index.html
@@ -20,7 +20,7 @@
 		</script>
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script type="text/javascript" src="js/ityped.js"></script>
 		<script type="text/javascript">
