--- a/week13-project3/views/index.html
+++ b/week13-project3/views/index.html
@@ -5,21 +5,31 @@
 		<title>Where's ___o</title>
 		<meta name="viewport" content="width=device-width initial-scale=1.0, user-scalable=yes">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 	</head>
 	<body>
 		<div id="container">
+
 			<h1 class="main">Where's <span class="element"></span>o
 				<br>
-				<div id="nameInput">Name:<input type="text" id="name">
-					<button id="findButton">Click Here to Find</button>
+				<div id="nameInput"><input type="text" id="name" value="Name" onfocus="if (this.value=='Name') this.value='';">
+					<br><button id="findButton" class="button">Click Here to Find</button>
 				</div>
 			</h1>
 		</div>
+		<div id="score"></div>
+		<div id="scores">
+			<button id="highScores" class="button">High Scores</button>
+			<button id="aboutButton" class=button>About</button>
+		</div>
+
 		<script>
 			var page = '<%=page%>';
 		</script>
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
+		<script language="javascript" type="text/javascript" src="js/p5/p5.dom.js"></script>
+		<script src="js/p5/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script type="text/javascript" src="js/ityped.js"></script>
@@ -27,7 +37,9 @@
 			window.ityped.init(document.querySelector('.element'),{
 				strings : ['Wald', 'Megan', 'Bon', 'John', 'Craig'],
 				loop: true,
-				typeSpeed: 300,
+				typeSpeed: 400,
+				backSpeed: 400,
+				startDelay: 200,
 				showCursor: false
 			})
 		</script>
